--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,8 @@ FROM golang:1.22.0-bullseye as deploy-builder
 
 WORKDIR /app
 
-COPY go.mod go.sum ./
+COPY go.mod ./
+COPY go.sum ./
 RUN go mod download
 
 COPY . .
@@ -20,6 +21,5 @@ CMD ["./app"]
 # ---------------------------------------------------
 FROM golang:1.22.0 as dev
 WORKDIR /app
-
 RUN go install github.com/cosmtrek/air@latest
-CMD ["air"]
+CMD ["air", "-c", ".air.toml"]
