--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,32 @@ services:
       dockerfile: ./app/Dockerfile
       args:
         - target=dev
+    environment:
+      PORT: 8080
+      CHEKI_DB_HOST: cheki-db
+      CHEKI_DB_PORT: 3306
+      CHEKI_DB_USER: cheki
+      CHEKI_DB_PASSWORD: cheki
+      CHEKI_DB_DATABASE: cheki
+
     volumes:
       - ./app:/app
     ports:
-      - "18000:80"
+      - "18000:8080"
+
+  db:
+    image: mysql:8.0.29
+    platform: linux/amd64
+    container_name: booked_db
+    volumes:
+      - db-data:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=password
+      - MYSQL_DATABASE=cheki
+    ports:
+      - "3306:3306"
+
+volumes:
+  db-data:
