--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - ./app:/app
     ports:
       - "18000:8080"
+    depends_on:
+      - db
 
   db:
     image: mysql:8.0.29
@@ -24,13 +26,14 @@ services:
     container_name: cheki-db
     volumes:
       - db-data:/var/lib/mysql
+      - ./app/_tools/mysql/conf.d:/etc/mysql/conf.d:cached
     environment:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_USER=user
       - MYSQL_PASSWORD=password
       - MYSQL_DATABASE=cheki
     ports:
-      - "3306:33306"
+      - "33306:3306"
 
 volumes:
   db-data:
