--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
 
     - uses: actions/checkout@v3
 
-    - run: cd app && go test -coverprofile=coverage.out
+#    - run: cd app && go test -v ./... -coverprofile=coverage.out
 
     - name: report coverage
       uses: k1LoW/octocov-action@v0
